--- a/Magic Menu Indicator/main.css
+++ b/Magic Menu Indicator/main.css
@@ -15,13 +15,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   min-height: 100vh;
   background: var(--clr);
 }
 
 .navigation {
   position: relative;
-  width: 400px;
+  width: 500px;
   height: 70px;
   background: #fff;
   position: relative;
@@ -138,4 +139,20 @@ body {
 
 .navigation ul li:nth-child(5).active ~ .indicator {
     transform: translateX(calc(70px * 4));
+}
+
+.link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    padding: 25px;
+    width: 500px;
+    height: 70px;
+    border-radius: 10px;
+    background-color: white;
+    font-size: 1.25em;
+    font-weight: 800;
+    letter-spacing: 1.5px;
+    text-align: center;
 }
