--- a/Portfolio/style.scss
+++ b/Portfolio/style.scss
@@ -1,76 +1,161 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+:root {
+    --red: #ea5e5e;
+    --yellow: #f7ba3e;
+    --blue: #56b3b4;
+    --purple: #bf85bf;
+    --background: #1a2b34;
+    --gray: #334651;
+
+    --bg: rgb(28,28,28);
+    --bgLight: rgb(48,48,48);
+    --linearRY: linear-gradient(
+        45deg, var(--red), var(--yellow)
+    );
+
+    --headerHeight: 70px;
+    --footerHeight: 30px;
+}
+
+html {
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
-    background: rgba(255, 127, 80, .7);
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    min-height: 100%;
+    font: 600 16px 'Poppins';
+    color: white;
+    display: flex;
+    flex-direction: column;
     
     .header {
-        height: 50px;
-        background: lightblue;
-        padding: 10px;
+        height: var(--headerHeight);
+        background: var(--bg);
 
         .title {
             position: absolute;
-            padding-left: 10px;
+            padding-left: 24px;
             font-size: 60px;
-            top: -54px;
+            top: -57px;
             cursor: default;
         }
 
         .container {
+            height: 100%;
             display: flex;
-            justify-content: flex-end;
             align-items: center;
+            justify-content: flex-end;
+            margin-left: 25%;
+            margin-right: 24px;
 
             .btn {
-                width: 150px;
-                margin:0 10px ;
-                background: white;
-                border: 1px solid lightblue;
-                border-radius: 50px;
-                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                font-size: 32px;
+                width: auto;
+                margin:0 10px;
+                background: none;
+                color: white;
+                border: none;
+                font-size: 24px;
+                font-weight: 800;
                 cursor: pointer;
-                transition: .5s;
+                transition: ease-in .3s;
+                position: relative;
+                overflow: hidden;
             }
 
-            .btn:hover {
-                background: rgb(28,28,28);
-                border: 1px solid white;
-                color:white;
-                transform: scale(1.1);
-                filter: drop-shadow(0 5px 5px black);
-                
+            .btn:hover, .btn:focus {
+                transform: translateY(-3px);
+            }
+
+            .btn::before {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 0%;
+                background: var(--red);
+                transition: ease-in .3s;
+                z-index: -1;
+            }
+
+            .btn:hover::before ,.btn:focus::before {
+                height: 100%;
+            }
+
+            b {
+                cursor: default;
             }
         }
     }
 
     .main {
-        position: fixed;
-        width: 100%;
-        height: calc(100vh - (70px + 50px));
-        background: rgb(28,28,28);
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        position: relative;
+        width: auto;
+        height: 100%;
+        background: var(--linearRY);
+        .container {
+            position: relative;
+            width: auto;
+            height: auto;
+            padding: 24px;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            grid-auto-rows: minmax(100px, auto);
+            gap: 10px;
 
-        h1 {
-            font-size: 128px;
-            transition: .5s;
-            cursor: default;
-        }
-        h1:hover {
-            filter: blur(10px);
+            .main-content {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 128px;
+                transition: .5s;
+                cursor: default;
+            }
+
+            .main-content:hover{
+                background: var(--background);
+            }
         }
     }
 
     .footer {
-        position: fixed;
-        bottom: 0;
-        height: 50px;
+        margin-top: auto;
+        height: var(--footerHeight);
         width: 100%;
-        background: lightblue;
-        text-align: center;
+        background: var(--bg);
+        display: flex;
+        align-items: center;
+        justify-content: end;
+
+        p {
+            margin-right: 24px;
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    body {
+        .header {
+            .title {
+                font-size: 30px;
+                top: 0px;
+            }
+            .container {
+                .btn {
+                    font-size: 12px;
+                }
+            }
+        }
+
+        .main {
+            grid-template-columns: repeat(3, 1fr);
+
+            .main-content {
+                font-size: 64px;
+            }
+        }
     }
 }
