--- a/Portfolio/style.scss
+++ b/Portfolio/style.scss
@@ -12,6 +12,9 @@
   --bgLight: rgb(48, 48, 48);
   --linearRY: linear-gradient(90deg, var(--red), var(--yellow));
 
+  --gradient1: linear-gradient(90deg, #77F2B3, #3cb3c3);
+  --gradient2: linear-gradient(160deg, #79f1ff, #5e80d7);
+
   --headerHeight: 70px;
   --footerHeight: 30px;
 }
@@ -26,17 +29,17 @@ body {
   min-height: 100%;
   min-width: 320px;
   font: 600 16px 'Poppins';
-  background: var(--linearRY);
+  background: white;
   color: white;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
 
   .header {
     width: 100%;
     height: var(--headerHeight);
-    background: var(--bg);
-    margin-bottom: auto;
-    z-index: 2;
+    background: var(--gradient1);
 
     .title {
       position: absolute;
@@ -44,6 +47,8 @@ body {
       font-size: 60px;
       top: -57px;
       cursor: default;
+      filter: drop-shadow(0 5px 5px #3cb3c3);
+      overflow: hidden;
     }
 
     .container {
@@ -53,46 +58,70 @@ body {
       justify-content: flex-end;
       margin-left: 25%;
       margin-right: 24px;
+      filter: drop-shadow(0 5px 5px #3cb3c3);
 
-      .btn {
-        width: auto;
-        margin: 0 10px;
-        background: none;
-        color: white;
-        border: none;
-        font-size: 24px;
-        font-weight: 800;
-        cursor: pointer;
-        transition: ease-in 0.3s;
-        position: relative;
-        overflow: hidden;
-      }
+      div {
+        margin-left: 18px;
+        margin-right: 18px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        .btn {
+          width: auto;
+          padding-left: 10px;
+          padding-right: 10px;
+          background: none;
+          color: white;
+          border: none;
+          font-size: 24px;
+          font-weight: 800;
+          cursor: pointer;
+          transition: ease-in 0.2s;
+          position: relative;
+          overflow: hidden;
+          text-transform: uppercase;
+        }
 
-      .btn:hover,
-      .btn:focus {
-        transform: translateY(-3px);
-      }
+        .btn:hover,
+        .btn:focus {
+          transform: translateY(-3px);
+        }
 
-      .btn::before {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 0%;
-        background: var(--red);
-        transition: ease-in 0.3s;
-        z-index: -1;
-      }
+        .btn:active {
+          color: var(--bg);
+        }
 
-      .btn:hover::before,
-      .btn:focus::before {
-        height: 100%;
+        .btn::before {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 0%;
+          background: var(--red);
+          transition: ease-in 0.2s;
+          z-index: -1;
+        }
+
+        .btn:hover::before,
+        .btn:focus::before {
+          height: 100%;
+        }
       }
 
       b {
-        cursor: default;
+          cursor: default;
       }
+    }
+  }
+
+  .page-title {
+    margin-top: 0;
+    margin-bottom: auto;
+    p {
+      color: black;
+      font-size: 48px;
     }
   }
 
@@ -100,23 +129,34 @@ body {
     position: relative;
     width: auto;
     height: auto;
-    padding: 24px;
+    padding: 48px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(100px, auto);
-    gap: 10px;
+    gap: 48px;
+    z-index: 1;
 
     .main-content {
       display: flex;
       align-items: center;
       justify-content: center;
+      padding-top: 24px;
+      padding-bottom: 24px;
+      background: var(--gradient2);
+      border: none;
+      border-radius: 25px;
+      outline: 3px solid var(--blue);
+      outline-offset: 3px;
+      color: var(--bgLight);
       font-size: 128px;
-      transition: 0.5s;
-      cursor: default;
+      transition: linear .2s;
+      cursor: pointer;
     }
 
     .main-content:hover {
-      background: var(--background);
+      background: var(--gradient1);
+      transform: translateY(-10px);
+      color: white;
     }
   }
 
@@ -135,7 +175,7 @@ body {
   }
 }
 
-@media (orientation: portrait), (max-width: 900px) {
+@media (orientation: portrait), (max-width: 1360px) {
   body {
     .header {
       .title {
@@ -151,7 +191,7 @@ body {
     }
 
     .main {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(2, 1fr);
 
       .main-content {
         font-size: 64px;
@@ -160,10 +200,12 @@ body {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   body {
     overflow-x: hidden;
+    
     .header {
+      height: 330px;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -176,7 +218,45 @@ body {
       }
 
       .container {
-        opacity: 0;
+        width: 90%;
+        margin: 0;
+        margin-bottom: 24px;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        flex-direction: column;
+
+        div {
+          width: 100%;
+          
+          .btn {
+            width: 100%;
+            text-align: center;
+            overflow: visible;
+          }
+
+          .btn:hover,
+          .btn:focus {
+            transform: translateY(0);
+          }
+
+          .btn::before {
+            width: 100%;
+            height: 100%;
+            border-radius: 50px;
+            opacity: 0%;
+          }
+
+          .btn:hover::before,
+          .btn:focus::before {
+            opacity: 100%;
+          }
+        }
+
+        b {
+          opacity: 0;
+        }
       }
     }
 
@@ -185,6 +265,14 @@ body {
 
       .main-content {
         font-size: 64px;
+      }
+    }
+
+    .footer {
+      
+      p {
+        font-size: 11px;
+        margin-right: 12px;
       }
     }
   }
