--- a/Prettier_animation/style.css
+++ b/Prettier_animation/style.css
@@ -14,6 +14,20 @@ body {
     margin: 0;
     padding-top: 50px;
     padding-left: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.title {
+    margin-bottom: 30px;
+}
+
+.title a {
+    font-size: 48px;
+    color: white;
 }
 
 .container {
